c2dascript-transpile/tests/snapshots/snapshots__transpile@scalar_init.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/scalar_init.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(44) }, [], false, false, false); declaration=scalar_init; cause=C extended-precision floating type has no daScript representation

--> ./tests/snapshots/scalar_init.c:8:1
