c2dascript-transpile/tests/snapshots/snapshots__transpile@spin.c.x86_64.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/arch-specific/spin.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(44) }, [], false, false, true); declaration=spin; cause=unsupported builtin __builtin_ia32_pause
--> ./tests/snapshots/arch-specific/spin.c:3:5

--> ./tests/snapshots/arch-specific/spin.c:1:1
