c2dascript-transpile/tests/snapshots/snapshots__transpile@static_assert.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/static_assert.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(44) }, [], false, false, false); declaration=static_assert; cause=unsupported decl kind

--> ./tests/snapshots/static_assert.c:1:1
